--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+
+# Dependencies
+node_modules/
+
+# Build files
+.next/
+out/
+build/
