--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "next": "15.3.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
