--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "wellness-oauth-fresh",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,12 +11,18 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "axios-cookiejar-support": "^6.0.2",
     "dotenv": "^16.5.0",
     "next": "15.3.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.15.6",
+    "puppeteer": "^24.10.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
