--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.1",
     "axios": "^1.9.0",
     "axios-cookiejar-support": "^6.0.2",
     "dotenv": "^16.5.0",
